<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/roll_no"
            android:layout_width="50dip"
            android:layout_height="fill_parent"
            android:gravity="center_vertical|center"
            android:singleLine="true"
            android:text="@string/row_no" 
            android:textColor="#000000"
            android:textSize="12dip"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rserial_number"
            android:layout_width="250dip"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dip"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="@string/serial_number"
            android:textColor="#000000"
            android:textSize="12dip"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/date"
            android:layout_width="100dip"
            android:layout_height="fill_parent"
            android:gravity="center_vertical|center"
            android:singleLine="true"
            android:text="@string/date"
            android:textColor="#000000"
            android:textSize="12dip"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/location"
            android:layout_width="100dip"
            android:layout_height="fill_parent"
            android:gravity="center_vertical|center"
            android:singleLine="true"
            android:text="@string/location"
            android:textColor="#000000"
            android:textSize="12dip"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/info"
            android:layout_width="100dip"
            android:layout_height="fill_parent"
            android:gravity="center_vertical|center"
            android:singleLine="true"
            android:text="@string/info"
            android:textColor="#000000"
            android:textSize="12dip"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sync"
            android:layout_width="50dip"
            android:layout_height="fill_parent"
            android:gravity="center_vertical|center"
            android:singleLine="true"
            android:text="@string/sync"
            android:textColor="#000000"
            android:textSize="12dip"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>