<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainlayout"
    android:layout_width="70dip"
    android:layout_height="fill_parent"
    android:gravity="right" >

    <RelativeLayout
        android:id="@+id/sync_dialog_box"
        android:layout_width="wrap_content"
        android:layout_height="80dip"
        android:background="#FFFFFF" >

        <TextView
            android:id="@+id/sync_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dip"
            android:layout_marginTop="10dip"
            android:scaleType="fitXY"
            android:text="@string/sync_tittle"
            android:textColor="#000000" />

        <Button
            android:id="@+id/no_button"
            android:layout_width="60dip"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sync_title"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="10dip"
            android:text="@string/sync_dialog_no" >
        </Button>

        <Button
            android:id="@+id/yes_button"
            android:layout_width="60dip"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sync_title"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="10dip"
            android:layout_toRightOf="@+id/no_button"
            android:text="@string/sync_dialog_yes" >
        </Button>
    </RelativeLayout>

</RelativeLayout>