<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >
       <TextView
                android:id="@+id/category_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"               
                android:singleLine="true"
                android:gravity="left"
                android:textColor="#000000"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:singleLine="true"
                android:textColor="#000000"
                android:textStyle="bold" />
           
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/question_no"
                android:layout_width="20dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:singleLine="true"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/question_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="#000000"
                android:textStyle="bold" />
        </LinearLayout>

        <ListView
            android:id="@+id/list_audit_controls_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:visibility="gone" >
        </ListView>
        <!-- </LinearLayout> -->

        <LinearLayout
            android:id="@+id/audit_controls_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dip"
            android:background="#FFFFFF"
            android:focusable="true"
            android:clickable="true"
            android:orientation="vertical" >
            <requestFocus />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#FFFFFF" >

            <TextView
                android:id="@+id/title_responsible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="28dip"
                android:layout_marginTop="10dip"
                android:text="@string/resposible"
                android:textColor="#000000"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="20dip"
            android:background="#FFFFFF" >

            <TextView
                android:id="@+id/text_operator"
                android:layout_width="80dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dip"
                android:singleLine="true"
                android:text="@string/operator"
                android:textColor="#000000" />

            <MultiAutoCompleteTextView
                android:id="@+id/auto_operator"
                android:layout_width="300dip"
                android:layout_height="30dip"
                android:layout_above="@+id/title_remark"
                android:background="@drawable/textboxdark"
                android:completionThreshold="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#FFFFFF" >

            <TextView
                android:id="@+id/text_supervisor"
                android:layout_width="80dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dip"
                android:layout_marginTop="20dip"
                android:singleLine="true"
                android:text="@string/supervisor"
                android:textColor="#000000" />

            <MultiAutoCompleteTextView
                android:id="@+id/auto_supervisor"
                android:layout_width="300dip"
                android:layout_height="30dip"
                android:layout_marginTop="20dip"
                android:background="@drawable/textboxdark"
                android:completionThreshold="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#FFFFFF" >

            <TextView
                android:id="@+id/text_technical"
                android:layout_width="80dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dip"
                android:layout_marginTop="20dip"
                android:singleLine="true"
                android:text="@string/technical"
                android:textColor="#000000" />

            <MultiAutoCompleteTextView
                android:id="@+id/auto_technical"
                android:layout_width="300dip"
                android:layout_height="30dip"
                android:layout_marginTop="20dip"
                android:background="@drawable/textboxdark"
                android:completionThreshold="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#FFFFFF" >

            <TextView
                android:id="@+id/title_remark"
                android:layout_width="80dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dip"
                android:layout_marginTop="20dip"
                android:singleLine="true"
                android:text="@string/remark"
                android:textColor="#000000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/remark_editText"
                android:layout_width="300dip"
                android:layout_height="30dip"
                android:layout_below="@+id/operator_btn"
                android:layout_marginLeft="38dip"
                android:layout_marginTop="20dip"
                android:background="@drawable/textboxdark" >

            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dip" >

            <TextView
                android:id="@+id/title_snap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dip"
                android:layout_marginTop="15dip"
                android:text="@string/snap"
                android:textColor="#000000"
                android:textStyle="bold" />

            <Button
                android:id="@+id/cam_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/remark_editText"
                android:layout_marginLeft="70dip"
                android:layout_marginTop="10dip"
                android:layout_toRightOf="@+id/title_snap"
                android:background="@drawable/camera" />

            <ImageView
                android:id="@+id/preview_imageView"
                android:layout_width="60dip"
                android:layout_height="80dip"
                android:layout_marginLeft="150dip"
                android:layout_toRightOf="@+id/cam_btn" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <Button
                android:id="@+id/previous_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="15dip"
                android:text="  "
                android:visibility="invisible" />

            <EditText
                android:id="@+id/find_question"
                android:layout_width="55dip"
                android:layout_height="45dip"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="185dip"
                android:inputType="number"
                android:visibility="invisible" />

            <Button
                android:id="@+id/next_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="180dip"
                android:layout_toRightOf="@+id/see_question"
                android:background="@drawable/next"
                android:gravity="right"
                android:tag="1" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>